  * uth (Machine layer that uses user-level threads for execution)
  * sim (Machine layer that simulates a simple message-passing machine with communications processors; based
         on the Dagger simulator)
  * shmem (Machine layer built on top of the OpenSHMEM API)

- The following modules have been removed: ARMCI, Jade, and Charj.

Charm++ Features & Fixes:

- We have renamed the `VERSION` file to `charm-version.h` and made it compatible
  with C. Charm++ programs that need to check the
  Charm++ version should use the `CHARM_VERSION`, `CHARM_VERSION_MAJOR`,
  `CHARM_VERSION_MINOR`, and `CHARM_VERSION_PATCH` C macros defined when compiling
  a Charm++ application. We also provide a `CHARM_VERSION_GIT` macro for the exact
  git revision of Charm++. In shell scripts, you can determine the version information
  like this: `$ grep "CHARM_VERSION " charm-version.h | awk '{print $3}'`.

- Support for variable sized messages in TRAM.

- Added a pup_buffer API with zero copy functionality.

- Array broadcasts are now node aware, avoiding unnecessary
  duplication of messages. Expedited nokeep array broadcasts are also
  allowed now.

- Added CmiNodeReduce API for Converse node level reductions.

- Builds with CMK_OPTIMIZE=1 will only segfault to aid in debugging in
  CmiAbort when ++debug or +truecrash are provided.

- Callbacks used in liveViz have been made ASLR safe.

- Updated implementation of atomics, locks, and fences to use C++11/C11
  versions where suitable.

- Fixed bugs in HAPI and updated implementation to use new CUDA APIs.

- Added whenidle attribute to indicate entry method to be called when
  a PE is idle.

- Improved performance, support, and fixes for UCX. IBM Power is now
  supported with UCX.

- The CmiSyncSend family now tries to avoid copies for nokeep
  messages.

- Fixed bug with element IDs with CMK_GLOBAL_LOCATION_UPDATE.

- Fixed bug in BlockMap in array creation.

- Added CcdPROCESSOR_LONG_IDLE to run a function during long periods